.provarCaches/00D5f000005vwGkEAI/objects/rstk__locadd__c.object
<CustomObject>
    <description>locadd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Fringe for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Freight</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstfrght_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locadd_actucstfrght_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstfrght_orig__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locadd_actucstfrght_orig</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Labor for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Labor</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstlab_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstlab_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstlab_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstlab_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Material for this Project-Item pair.</inlineHelpText>
        <label>Average Unit Cost, Material</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstmtl_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstmtl_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstmtl_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstmtl_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Fringe Ohd for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Fringe Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdfrng_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdfrng_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdfrng_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdfrng_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Labor Ohd for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Labor Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdlab_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdlab_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdlab_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdlab_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Machine Ohd for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Machine Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmach_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdmach_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmach_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdmach_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Material Ohd for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Material Ohd</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmtl_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdmtl_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstohdmtl_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstohdmtl_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Average Unit Cost, Landing</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstothlnd_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locadd_actucstothlnd_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstothlnd_orig__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locadd_actucstothlnd_orig</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Subcontract Labor for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Sub Labor</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsublab_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstsublab_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsublab_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstsublab_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This value defines Unit cost of Subcontract Material for this Project-Item pair</inlineHelpText>
        <label>Average Unit Cost, Sub Material</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsubmtl_line__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstsubmtl_line</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_actucstsubmtl_orig__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>actucstsubmtl_orig</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_adj_decqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Adjust quantity</description>
        <inlineHelpText>Adjust quantity for an inventory location</inlineHelpText>
        <label>Adjust Quantity</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_adj_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Adj Quantity</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_alt_loc_decqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Alt Loc Decimal Quantity</description>
        <inlineHelpText>Alt Loc Decimal Quantity</inlineHelpText>
        <label>Alt Decimal Adj Quantity</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_alt_loc_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>alt_loc_qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_backflush_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Backflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_costtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>costtype</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_cyclecountind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cycle Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divlocadds</relationshipLabel>
        <relationshipName>divlocadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_document__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_empl_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>empl_name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the desired item number, then select from the resulting list.</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_icitemfifoseq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FIFO Cost Record</label>
        <referenceTo>rstk__icitemfifoseq__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_iclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This value defines the Stock Location for this Project-Item pair</inlineHelpText>
        <label>Stock Location</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_incrdecr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Increase/Decrease</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_install__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>install_ui</label>
        <referenceTo>rstk__syinstall__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_inv_offset_acct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv. Offset Acct.</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_inv_offset_acct_id__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Offset Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_item_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item is the designator for a given part. Can be up to 50 characters.</inlineHelpText>
        <label>Item No</label>
        <referenceTo>rstk__icitemcst__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_loc_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_loc_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select an Inventory Location ID valid for the given Division (user&apos;s Current Division).</inlineHelpText>
        <label>Stock Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (Stock Loc ID)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_locid_display__c</fullName>
        <inlineHelpText>Stock Location ID Number</inlineHelpText>
        <label>Stock Loc ID No</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lociddesc_ui__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lociddesc_ui</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lock_id__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lock_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_locnum__c</fullName>
        <inlineHelpText>Select an Inventory Location Number valid for the given Inventory Location ID if using pre-defined Location Numbers, otherwise enter a free-form Location Number up to 10 characters in length.</inlineHelpText>
        <label>Stock Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tracking No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_loctype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>loctype</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lotno__c</fullName>
        <inlineHelpText>Enter a valid Lot Number that is currently located in the given Division/Site/Project/Stock Loc ID/Stock Loc No (as applicable).</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lotref__c</fullName>
        <label>Lot Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lotserind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>lotserind</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_lotsrl_select__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot/Srl No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_nettable__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Nettable/Non Nettable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_ohdfrngind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ohdfrngind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_ohdlabind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ohdlabind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_ohdmachind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ohdmachind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_ohdmtlind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>ohdmtlind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_peitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>peitem_ui</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (peitem_ui)</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>pjproj_ui</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (pjproj_ui)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This value defines the Project number, if Project Control is active within the division. If Project Control is not active within the division, this field is null.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (Project)</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_projdesc_ui__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>projdesc_ui</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_rs_only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>rs_only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_run_background_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use Background Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_scrap_reason__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Reason</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_serial_text__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This defines the Site for this Division. This is the site where production and purchasing for this division occurs.</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add</relationshipLabel>
        <relationshipName>locadds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_txn_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Txn Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_type__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_usrno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>usrno</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locadd_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>wbs</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_backflushind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Backflush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_doc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (From Division)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromiclocitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item Number</inlineHelpText>
        <label>fromiclocitem</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (fromiclocitem)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromloccomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fromloccomment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Loc</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (From Loc)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>From Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromloctype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>fromloctype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select an active Project valid for the given Division (user&apos;s Current Division), placing it in Project box.  Note that multiple selections are allowed.</inlineHelpText>
        <label>From Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (Project)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_fromsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Site that inventory is being transferred from.  Note that only those Sites for your Current Division are displayed in dropdown.</inlineHelpText>
        <label>From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (From Site)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_frpjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Project Charge Code</description>
        <inlineHelpText>From Project Charge Code</inlineHelpText>
        <label>From Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (From Project Charge Code)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the desired item number, then select from the resulting list, which will place the item in the box below.</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-Stock Loc Add (locmove_icitem)</relationshipLabel>
        <relationshipName>ZZ_Stock_Loc_Add</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_islot__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_islot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_itemno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tracking No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_moveoption__c</fullName>
        <inlineHelpText>Select the applicable Move Option.  Options are

Move to an existing stock loc (must have an existing Item By Location when using this option)
Move to a new stock loc (will need to enter a new Inventory Location/Number in lower grid)</inlineHelpText>
        <label>Move Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Move to an existing stock loc</fullName>
                </value>
                <value>
                    <fullName>Move to a new stock loc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__locmove_moveqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_qtyavail__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Qty</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_selectedfromprojs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected From Projects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__locmove_selectedfromprojslist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_selectedfromprojslist</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_selecteditems__c</fullName>
        <inlineHelpText>Select item to be transferred using &apos;Search Item&apos;. Once done, item will appear in this box. Multiple items may be selected by entering an item, selecting it, see it appear in this box, then enter the next item, select it, moving it to this box, &amp; so on.</inlineHelpText>
        <label>Selected Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__locmove_selecteditemslist__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_selecteditemslist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_selectedserials__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>locmove_selectedserials</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__locmove_selectedtoprojs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected To Projects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>